Minor changes as per client request - 29/04/24

--- a/adynamics3/testComponents/clasess.html
+++ b/adynamics3/testComponents/clasess.html
@@ -34,37 +34,37 @@
 </head>
 
 <body>
-    <!-- Topbar Start -->
-    <div class="container-fluid bg-dark text-light p-0">
-      <div class="row gx-0 d-none d-lg-flex">
-        <div class="col-lg-7 px-5 text-start">
-          <div class="h-100 d-inline-flex align-items-center me-4">
-            <small class="fa fa-map-marker-alt text-primary me-2"></small>
-            <small>Bengaluru, Karanataka, India</small>
-          </div>
-          <div class="h-100 d-inline-flex align-items-center">
-            <small class="far fa-clock text-primary me-2"></small>
-            <small>himanshu@adynamics.in </small>
-          </div>
+  <!-- Topbar Start -->
+  <div class="container-fluid bg-dark text-light p-0">
+    <div class="row gx-0 d-none d-lg-flex">
+      <div class="col-lg-7 px-5 text-start">
+        <div class="h-100 d-inline-flex align-items-center me-4">
+          <small class="fa fa-map-marker-alt text-primary me-2"></small>
+          <small>Bengaluru, Karanataka, India</small>
         </div>
-        <div class="col-lg-5 px-5 text-end">
-          <div class="h-100 d-inline-flex align-items-center me-4">
-            <small class="fa fa-phone-alt text-primary me-2"></small>
-            <small>+91-8296076136</small>
-          </div>
-          <div class="h-100 d-inline-flex align-items-center mx-n2">
-            <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i
-                class="fab fa-facebook-f" style="font-size: 20px; color: #fff;"></i></a>
-            <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i
-                class="fab fa-twitter" style="font-size: 20px;"></i></a>
-            <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i
-                class="fab fa-linkedin-in" style="font-size: 20px; color:#fff"></i></a>
-            <a class="btn btn-square btn-link rounded-0" href=""><i class="fab fa-instagram"></i></a>
-          </div>
+        <div class="h-100 d-inline-flex align-items-center">
+          <small class="far fa-clock text-primary me-2"></small>
+          <small>himanshu@adynamics.in </small>
+        </div>
+      </div>
+      <div class="col-lg-5 px-5 text-end">
+        <div class="h-100 d-inline-flex align-items-center me-4">
+          <small class="fa fa-phone-alt text-primary me-2"></small>
+          <small>+91-8296076136</small>
+        </div>
+        <div class="h-100 d-inline-flex align-items-center mx-n2">
+          <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i
+              class="fab fa-facebook-f" style="font-size: 20px; color: #fff;"></i></a>
+          <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i
+              class="fab fa-twitter" style="font-size: 20px;"></i></a>
+          <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i
+              class="fab fa-linkedin-in" style="font-size: 20px; color:#fff"></i></a>
+          <a class="btn btn-square btn-link rounded-0" href=""><i class="fab fa-instagram"></i></a>
         </div>
       </div>
     </div>
-    <!-- Topbar End -->
+  </div>
+  <!-- Topbar End -->
   <!-- Navbar Start -->
   <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
     <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
@@ -86,8 +86,8 @@
               <a href="..//testComponents/clasess.html" class="nav-item nav-link nav-dropdown ">Classes</a>
               <div class="dropdown-menu">
                 <a href="../inidvidual-clases/pretyping.html">A320 Pre Type Rating Class</a>
-                <a href="../course-details.html">DGca CPL Classes</a>
-                <a href="../inidvidual-clases/RTR.html">Radio Telephony (rtr) Class</a>
+                <a href="../course-details.html">DGCA CPL Classes</a>
+                <a href="../inidvidual-clases/RTR.html">Radio Telephony (RTR) Class</a>
                 <a href="../inidvidual-clases/niosclasses.html">NIOS Prep Class</a>
               </div>
             </div>
@@ -142,7 +142,7 @@
           <div class="courses-item d-flex flex-column flex-xl-row arc-shadow overflow-hidden h-100">
             <div class="text-center p-4">
               <h5 class="mb-3 mt-2 mt-xl-1">
-                DGca CPL Classes</h5>
+                DGCA CPL Classes</h5>
               <p>
                 The DGCA CPL classes play a pivotal role in shaping competent and responsible commercial pilots, .
               </p>
@@ -156,7 +156,7 @@
               </ol>
             </div>
             <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
-              <img class="img-fluid border-r10" src="../img/DgcaCpl3.png" alt="" />
+              <img class="img-fluid border-r10" src="../img/DGCACpl3.png" alt="" />
               <div class="courses-overlay">
                 <a class="btn btn-outline-primary border-2 courses-btn-bg" href="../course-details.html">Read More</a>
               </div>
@@ -169,7 +169,7 @@
             <div class="text-center p-4">
               <h5 class="mb-3 mt-2 mt-xl-1">
 
-                Radio Telephony (rtr) Class</h5>
+                Radio Telephony (RTR) Class</h5>
               <p>
                 This training is crucial for effective interaction between aircraft and air traffic control.
               </p>
@@ -183,7 +183,7 @@
               </ol>
             </div>
             <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
-              <img class="img-fluid border-r10" src="../img/rtrclasses.png" alt="" />
+              <img class="img-fluid border-r10" src="../img/RTRclasses.png" alt="" />
               <div class="courses-overlay">
                 <a class="btn btn-outline-primary border-2 courses-btn-bg" href="../inidvidual-clases/RTR.html">Read
                   More</a>
@@ -224,71 +224,75 @@
   </div>
   <!-- Courses End -->
   <!-- Footer Start -->
-    <!-- Footer Start -->
-    <footer class="new_footer_area bg_color">
-      <div class="new_footer_top">
-          <div class="container">
-              <div class="row">
-                  <div class="col-lg-3 col-md-6">
-                      <div class="f_widget company_widget wow fadeInLeft" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
-                          <h3 class="f-title f_600 t_color f_size_18">Get in Touch</h3>
-                          <p>Don’t miss any updates of our new templates and extensions.!</p>
-                          <form action="#" class="f_subscribe_two mailchimp" method="post" novalidate="true" _lpchecked="1">
-                              <input type="text" name="EMAIL" class="form-control memail" placeholder="Email">
-                              <button class="btn btn_get btn_get_two" type="submit">Subscribe</button>
-                              <p class="mchimp-errmessage" style="display: none;"></p>
-                              <p class="mchimp-sucmessage" style="display: none;"></p>
-                          </form>
-                      </div>
-                  </div>
-                  <div class="col-lg-3 col-md-6">
-                      <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
-                          <h3 class="f-title f_600 t_color f_size_18">Download</h3>
-                          <ul class="list-unstyled f_list">
-                              <li><a href="#">Company</a></li>
-                              <li><a href="#">Android App</a></li>
-                              <li><a href="#">ios App</a></li>
-                              <li><a href="#">Desktop</a></li>
-                              <li><a href="#">Projects</a></li>
-                              <li><a href="#">My tasks</a></li>
-                          </ul>
-                      </div>
-                  </div>
-                  <div class="col-lg-3 col-md-6">
-                      <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInLeft;">
-                          <h3 class="f-title f_600 t_color f_size_18">Help</h3>
-                          <ul class="list-unstyled f_list">
-                              <li><a href="#">FAQ</a></li>
-                              <li><a href="#">Term &amp; conditions</a></li>
-                              <li><a href="#">Reporting</a></li>
-                              <li><a href="#">Documentation</a></li>
-                              <li><a href="#">Support Policy</a></li>
-                              <li><a href="#">Privacy</a></li>
-                          </ul>
-                      </div>
-                  </div>
-                  <div class="col-lg-3 col-md-6">
-                      <div class="f_widget social-widget pl_70 wow fadeInLeft" data-wow-delay="0.8s" style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInLeft;">
-                          <h3 class="f-title f_600 t_color f_size_18">Team Solutions</h3>
-                          <div class="f_social_icon">
-                              <a href="#" class="fab fa-facebook"></a>
-                              <a href="#" class="fab fa-twitter"></a>
-                              <a href="#" class="fab fa-linkedin"></a>
-                              <a href="#" class="fab fa-pinterest"></a>
-                          </div>
-                      </div>
-                  </div>
+  <!-- Footer Start -->
+  <footer class="new_footer_area bg_color">
+    <div class="new_footer_top">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-3 col-md-6">
+            <div class="f_widget company_widget wow fadeInLeft" data-wow-delay="0.2s"
+              style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
+              <h3 class="f-title f_600 t_color f_size_18">Get in Touch</h3>
+              <p>Don’t miss any updates of our new templates and extensions.!</p>
+              <form action="#" class="f_subscribe_two mailchimp" method="post" novalidate="true" _lpchecked="1">
+                <input type="text" name="EMAIL" class="form-control memail" placeholder="Email">
+                <button class="btn btn_get btn_get_two" type="submit">Subscribe</button>
+                <p class="mchimp-errmessage" style="display: none;"></p>
+                <p class="mchimp-sucmessage" style="display: none;"></p>
+              </form>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.4s"
+              style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
+              <h3 class="f-title f_600 t_color f_size_18">Download</h3>
+              <ul class="list-unstyled f_list">
+                <li><a href="#">Company</a></li>
+                <li><a href="#">Android App</a></li>
+                <li><a href="#">ios App</a></li>
+                <li><a href="#">Desktop</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">My tasks</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.6s"
+              style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInLeft;">
+              <h3 class="f-title f_600 t_color f_size_18">Help</h3>
+              <ul class="list-unstyled f_list">
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">Term &amp; conditions</a></li>
+                <li><a href="#">Reporting</a></li>
+                <li><a href="#">Documentation</a></li>
+                <li><a href="#">Support Policy</a></li>
+                <li><a href="#">Privacy</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="f_widget social-widget pl_70 wow fadeInLeft" data-wow-delay="0.8s"
+              style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInLeft;">
+              <h3 class="f-title f_600 t_color f_size_18">Team Solutions</h3>
+              <div class="f_social_icon">
+                <a href="#" class="fab fa-facebook"></a>
+                <a href="#" class="fab fa-twitter"></a>
+                <a href="#" class="fab fa-linkedin"></a>
+                <a href="#" class="fab fa-pinterest"></a>
               </div>
+            </div>
           </div>
-          <div class="footer_bg">
-              <div class="footer_bg_one"></div>
-              <div class="footer_bg_two"></div>
-          </div>
+        </div>
       </div>
-      
+      <div class="footer_bg">
+        <div class="footer_bg_one"></div>
+        <div class="footer_bg_two"></div>
+      </div>
+    </div>
+
   </footer>
-    <!-- Footer End -->
-  
+  <!-- Footer End -->
+
   <!-- Copyright End -->
 
   <!-- Back to Top -->
