--- a/adynamics3/enquiry.html
+++ b/adynamics3/enquiry.html
@@ -99,8 +99,8 @@
 
                             <select class="form-control" id="dropdown">
                                 <option>A320 Pre Type Rating Class</option>
-                                <option>DGca CPL Classes</option>
-                                <option>Radio Telephony (rtr) Class</option>
+                                <option>DGCA CPL Classes</option>
+                                <option>Radio Telephony (RTR) Class</option>
                                 <option>NIOS Prep Class</option>
                             </select>
 
