--- a/adynamics3/inidvidual-clases/CONVESION.html
+++ b/adynamics3/inidvidual-clases/CONVESION.html
@@ -60,8 +60,8 @@
               <a href="../testComponents/clasess.html" class="nav-item nav-link nav-dropdown ">Classes</a>
               <div class="dropdown-menu">
                 <a href="../inidvidual-clases/pretyping.html">A320 Pre Type Rating Class</a>
-                <a href="../course-details.html">DGca CPL Classes</a>
-                <a href="../inidvidual-clases/RTR.html">Radio Telephony (rtr) Class</a>
+                <a href="../course-details.html">DGCA CPL Classes</a>
+                <a href="../inidvidual-clases/RTR.html">Radio Telephony (RTR) Class</a>
                 <a href="../inidvidual-clases/niosclasses.html">NIOS Prep Class</a>
               </div>
             </div>
@@ -361,7 +361,7 @@
               </ol>
             </div>
             <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
-              <img class="img-fluid border-r10" src="../img/DgcaCpl3.png" alt="" />
+              <img class="img-fluid border-r10" src="../img/DGCACpl3.png" alt="" />
               <div class="courses-overlay">
                 <a class="btn btn-outline-primary border-2 courses-btn-bg" href="../course-details.html">Read More</a>
               </div>
@@ -372,7 +372,7 @@
         <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
           <div class="courses-item d-flex flex-column flex-xl-row arc-shadow overflow-hidden h-100">
             <div class="text-center p-4">
-              <h5 class="mb-3 mt-2 mt-xl-1">Radio Telephony (rtr) Class</h5>
+              <h5 class="mb-3 mt-2 mt-xl-1">Radio Telephony (RTR) Class</h5>
               <p>
                 This training is crucial for effective interaction between aircraft and air traffic control.
               </p>
@@ -386,7 +386,7 @@
               </ol>
             </div>
             <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
-              <img class="img-fluid border-r10" src="../img/rtrclasses.png" alt="" />
+              <img class="img-fluid border-r10" src="../img/RTRclasses.png" alt="" />
               <div class="courses-overlay">
                 <a class="btn btn-outline-primary border-2 courses-btn-bg" href="../inidvidual-clases/RTR.html">Read
                   More</a>
@@ -469,7 +469,7 @@
                 </ol>
               </div>
               <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
-                <img class="img-fluid border-r10 w-100 h-100" src="../img/DgcaCpl3.png" alt="" />
+                <img class="img-fluid border-r10 w-100 h-100" src="../img/DGCACpl3.png" alt="" />
                 <div class="courses-overlay">
                   <a class="btn btn-outline-primary border-2 courses-btn-bg" href="../course-details.html">Read More</a>
                 </div>
@@ -479,7 +479,7 @@
           <div class="wow fadeInUp testimonial-item imSection-bg border-r10" data-wow-delay="0.1s">
             <div class="courses-item d-flex flex-column flex-xl-row overflow-hidden h-100">
               <div class="text-center p-4">
-                <h5 class="mb-3 mt-2 mt-xl-1">Radio Telephony (rtr) Class</h5>
+                <h5 class="mb-3 mt-2 mt-xl-1">Radio Telephony (RTR) Class</h5>
                 <p>
                   This training is crucial for effective interaction between aircraft and air traffic control.
                 </p>
@@ -493,7 +493,7 @@
                 </ol>
               </div>
               <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
-                <img class="img-fluid border-r10 w-100 h-100" src="../img/rtrclasses.png" alt="" />
+                <img class="img-fluid border-r10 w-100 h-100" src="../img/RTRclasses.png" alt="" />
                 <div class="courses-overlay">
                   <a class="btn btn-outline-primary border-2 courses-btn-bg" href="../inidvidual-clases/RTR.html">Read
                     More</a>
@@ -557,8 +557,8 @@
               <h3 class="f-title f_600 t_color f_size_18">Courses</h3>
               <ul class="list-unstyled f_list">
                 <li><a href="#">A320 Pre Type Rating Class</a></li>
-                <li><a href="#">DGca CPL Classes</a></li>
-                <li><a href="#">Radio Telephony (rtr) Class</a></li>
+                <li><a href="#">DGCA CPL Classes</a></li>
+                <li><a href="#">Radio Telephony (RTR) Class</a></li>
                 <li><a href="#">NIOS Prep Class</a></li>
                 <li><a href="#">cpl conversion</a></li>
                 <li><a href="#">
