--- a/adynamics3/inidvidual-clases/cplmorocco.html
+++ b/adynamics3/inidvidual-clases/cplmorocco.html
@@ -37,13 +37,13 @@
 
 <body>
 
-    <div class="demo-class">
-        <iframe src="https://www.youtube.com/embed/lKr-EdxFhnM?si=rVfbLDS_tgJVAEvE" id="player"
-          title="YouTube video player" frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <button class="close-demo-class" onclick="closeDemoClass()"><i class="fa fa-times"></i></button>
-      </div>
+  <div class="demo-class">
+    <iframe src="https://www.youtube.com/embed/lKr-EdxFhnM?si=rVfbLDS_tgJVAEvE" id="player" title="YouTube video player"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <button class="close-demo-class" onclick="closeDemoClass()"><i class="fa fa-times"></i></button>
+  </div>
   <!-- Navbar Start -->
   <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
     <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
@@ -68,8 +68,8 @@
               <a href="/adynamics3/testComponents/clasess.html" class="nav-item nav-link nav-dropdown ">Classes</a>
               <div class="dropdown-menu">
                 <a href="../inidvidual-clases/pretyping.html">A320 Pre Type Rating Class</a>
-                <a href="../course-details.html">DGca CPL Classes</a>
-                <a href="../inidvidual-clases/RTR.html">Radio Telephony (rtr) Class</a>
+                <a href="../course-details.html">DGCA CPL Classes</a>
+                <a href="../inidvidual-clases/RTR.html">Radio Telephony (RTR) Class</a>
                 <a href="../inidvidual-clases/niosclasses.html">NIOS Prep Class</a>
               </div>
             </div>
@@ -455,7 +455,7 @@
               </ol>
             </div>
             <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
-              <img class="img-fluid border-r10" src="../img/DgcaCpl3.png" alt="" />
+              <img class="img-fluid border-r10" src="../img/DGCACpl3.png" alt="" />
               <div class="courses-overlay">
                 <a class="btn btn-outline-primary border-2 courses-btn-bg" href="../course-details.html">Read More</a>
               </div>
@@ -466,7 +466,7 @@
         <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
           <div class="courses-item d-flex flex-column flex-xl-row arc-shadow overflow-hidden h-100">
             <div class="text-center p-4">
-              <h5 class="mb-3 mt-2 mt-xl-1">Radio Telephony (rtr) Class</h5>
+              <h5 class="mb-3 mt-2 mt-xl-1">Radio Telephony (RTR) Class</h5>
               <p>
                 This training is crucial for effective interaction between aircraft and air traffic
                 control.
@@ -481,7 +481,7 @@
               </ol>
             </div>
             <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
-              <img class="img-fluid border-r10" src="../img/rtrclasses.png" alt="" />
+              <img class="img-fluid border-r10" src="../img/RTRclasses.png" alt="" />
               <div class="courses-overlay">
                 <a class="btn btn-outline-primary border-2 courses-btn-bg" href="../inidvidual-clases/RTR.html">Read
                   More</a>
@@ -565,7 +565,7 @@
                 </ol>
               </div>
               <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
-                <img class="img-fluid border-r10 w-100 h-100" src="../img/DgcaCpl3.png" alt="" />
+                <img class="img-fluid border-r10 w-100 h-100" src="../img/DGCACpl3.png" alt="" />
                 <div class="courses-overlay">
                   <a class="btn btn-outline-primary border-2 courses-btn-bg" href="../course-details.html">Read More</a>
                 </div>
@@ -575,7 +575,7 @@
           <div class="wow fadeInUp testimonial-item imSection-bg border-r10" data-wow-delay="0.1s">
             <div class="courses-item d-flex flex-column flex-xl-row overflow-hidden h-100">
               <div class="text-center p-4">
-                <h5 class="mb-3 mt-2 mt-xl-1">Radio Telephony (rtr) Class</h5>
+                <h5 class="mb-3 mt-2 mt-xl-1">Radio Telephony (RTR) Class</h5>
                 <p>
                   This training is crucial for effective interaction between aircraft and air traffic
                   control.
@@ -590,7 +590,7 @@
                 </ol>
               </div>
               <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
-                <img class="img-fluid border-r10 w-100 h-100" src="../img/rtrclasses.png" alt="" />
+                <img class="img-fluid border-r10 w-100 h-100" src="../img/RTRclasses.png" alt="" />
                 <div class="courses-overlay">
                   <a class="btn btn-outline-primary border-2 courses-btn-bg" href="../inidvidual-clases/RTR.html">Read
                     More</a>
@@ -656,8 +656,8 @@
               <h3 class="f-title f_600 t_color f_size_18">Courses</h3>
               <ul class="list-unstyled f_list">
                 <li><a href="#">A320 Pre Type Rating Class</a></li>
-                <li><a href="#">DGca CPL Classes</a></li>
-                <li><a href="#">Radio Telephony (rtr) Class</a></li>
+                <li><a href="#">DGCA CPL Classes</a></li>
+                <li><a href="#">Radio Telephony (RTR) Class</a></li>
                 <li><a href="#">NIOS Prep Class</a></li>
                 <li><a href="#">cpl conversion</a></li>
                 <li><a href="#">
