--- a/adynamics3/jj.html
+++ b/adynamics3/jj.html
@@ -260,7 +260,7 @@
 
   
   <figure class="has-before hero-banner che" style="--width: 1050; --height: 1050;  padding: 0px;">
-    <img src="./img/check.JPG" width="400px" height="100px" alt="hero banner" class="img-cover  hero-banner resize"
+    <img src="./img/hero-banner.png" width="400px" height="100px" alt="hero banner" class="img-cover  hero-banner resize"
       style="border-radius: 50%; width: 100%;  ">
   </figure>
 
