Changed the mobile view of maps

--- a/adynamics3/testComponents/cource-aboutpage.html
+++ b/adynamics3/testComponents/cource-aboutpage.html
@@ -764,86 +764,48 @@
 
     <div class="mobile-view">
 
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="../assets/img/63e4367714ad0b4cbd566ac387f6780e.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center bottom-0">
-                        <h2 class="bg-opacity-50 py-2 px-4">CPL Training in USA</h2>
-                        <p class="bg-opacity-50 py-2 px-4"> Many aspiring pilots worldwide choose of its
-                            excellent aviation infrastructure and training
-                            facilities.</p>
-                        <a href="../inidvidual-clases/cpltaring.html"
-                            class="btn btn-outline-dark px-4 py-2 rounded-0">Learn More</a>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="../assets/img/South-Africa-Country-Outline.jpg" class="d-block w-100" alt="...">
-                    <div
-                        class="carousel-caption d-flex flex-column align-items-center justify-content-center bottom-0 ">
-                        <h2 class="bg-opacity-50 py-2 px-4">CPL Training in South Africa</h2>
-                        <p class="bg-opacity-50 py-2 px-4">Some representative placeholder content for the second slide.
-                        </p>
-                        <a href="../inidvidual-clases/cplsouth.html"
-                            class="btn btn-outline-dark px-4 py-2 rounded-0">Learn More</a>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="../assets/img/3d86015cc137b1c17239ba93de4256c5.jpg" class="d-block w-100" alt="...">
-                    <div
-                        class="carousel-caption d-flex flex-column align-items-center justify-content-center bottom-0 ">
-                        <h2 class="bg-opacity-50 py-2 px-4">CPL Training in India</h2>
-                        <p class="bg-opacity-50 py-2 px-4">Some representative placeholder content for the second slide.
-                        </p>
-                        <a href="../inidvidual-clases/CONVESION.html"
-                            class="btn btn-outline-dark px-4 py-2 rounded-0">Learn More</a>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="../assets/img/Tunisia-Country-Outline.jpg" class="d-block w-100" alt="...">
-                    <div
-                        class="carousel-caption d-flex flex-column align-items-center justify-content-center bottom-0 ">
-                        <h2 class="bg-opacity-50 py-2 px-4">CPL Training in Tunisia</h2>
-                        <p class="bg-opacity-50 py-2 px-4">Some representative placeholder content for the second slide.
-                        </p>
-                        <a href="../inidvidual-clases/cpltunisia.html"
-                            class="btn btn-outline-dark px-4 py-2 rounded-0">Learn More</a>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="../assets/img/Morocco-Country-Outline (1).jpg" class="d-block w-100" alt="...">
-                    <div
-                        class="carousel-caption d-flex flex-column align-items-center justify-content-center bottom-0 ">
-                        <h2 class="bg-opacity-50 py-2 px-4">CPL Training in Morocco</h2>
-                        <p class="bg-opacity-50 py-2 px-4">Some representative placeholder content for the second slide.
-                        </p>
-                        <a href="../inidvidual-clases/cplmorocco.html"
-                            class="btn btn-outline-dark px-4 py-2 rounded-0">Learn More</a>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="../assets/img/Argentina-Country-Outline.jpg" class="d-block w-100" alt="...">
-                    <div
-                        class="carousel-caption d-flex flex-column align-items-center justify-content-center bottom-0 ">
-                        <h2 class="bg-opacity-50 py-2 px-4">CPL Training in Argentina</h2>
-                        <p class="bg-opacity-50 py-2 px-4">Some representative placeholder content for the second slide.
-                        </p>
-                        <a href="../inidvidual-clases/cplargentina.html"
-                            class="btn btn-outline-dark px-4 py-2 rounded-0">Learn More</a>
-                    </div>
-                </div>
+              <div class="carousel-item active">
+                <h2>CPL Training in Tunisia</h2>
+                <img src="../assets/img/OIG1.jpeg" class="d-block w-100" alt="...">
+                <a href="../inidvidual-clases/cpltunisia.html">Learn More</a>
+              </div>
+              <div class="carousel-item">
+                <h2>CPL Training in USA</h2>
+                <img src="../assets/img/OIG2.jpeg" class="d-block w-100" alt="...">
+                <a href="../inidvidual-clases/cpltaring.html">Learn More</a>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
+              <div class="carousel-item">
+                <h2>CPL Training in India</h2>
+                <img src="../assets/img/OIG3.jpeg" class="d-block w-100" alt="...">
+                <a href="../inidvidual-clases/CONVESION.html">Learn More</a>
+            </div>
+              <div class="carousel-item">
+                <h2>CPL Training in Morocco</h2>
+                <img src="../assets/img/OIG4.jpeg" class="d-block w-100" alt="...">
+                <a href="../inidvidual-clases/cplmorocco.html">Learn More</a>
+            </div>
+              <div class="carousel-item">
+                <h2>CPL Training in Argentina</h2>
+                <img src="../assets/img/OIG5.jpeg" class="d-block w-100" alt="...">
+                <a href="../inidvidual-clases/cplargentina.html">Learn More</a>
+            </div>
+              <div class="carousel-item">
+                <h2>CPL Training in South Africa</h2>
+                <img src="../assets/img/OIG6.jpeg" class="d-block w-100" alt="...">
+                <a href="../inidvidual-clases/cplsouth.html">Learn More</a>
+            </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
             </button>
-        </div>
+          </div>
     </div>
 
 
