--- a/adynamics3/jj.html
+++ b/adynamics3/jj.html
@@ -1077,7 +1077,7 @@
                 </ol>
               </div>
               <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
-                <img class="img-fluid border-r10" src="./img/DGCACpl3.png" alt="" />
+                <img class="img-fluid border-r10" src="./img/DgcaCpl.png" alt="" />
                 <div class="courses-overlay">
                   <a class="btn btn-outline-primary border-2 courses-btn-bg" href="./course-details.html">Read More</a>
                 </div>
@@ -1102,7 +1102,7 @@
                 </ol>
               </div>
               <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
-                <img class="img-fluid border-r10" src="./img/RTRclasses.png" alt="" />
+                <img class="img-fluid border-r10" src="./img/rtrclasses.png" alt="" />
                 <div class="courses-overlay">
                   <a class="btn btn-outline-primary border-2 courses-btn-bg" href="./inidvidual-clases/RTR.html">Read
                     More</a>
