--- a/adynamics3/course-details.html
+++ b/adynamics3/course-details.html
@@ -86,7 +86,8 @@
                         </button>
                     </div>
                 </div>
-    </nav>
+            </div>                
+        </nav>
     <!-- Navbar End -->
 
     <!-- Detail Start -->
