Fixed carousel issues

--- a/adynamics3/jj.html
+++ b/adynamics3/jj.html
@@ -32,6 +32,7 @@
   <link href="css/style.css" rel="stylesheet" />
   <link rel="stylesheet" href="css2/style.css">
   <link rel="stylesheet" href="scss/follower.scss">
+  <link rel="stylesheet" href="scss/bootstrap/scss/_carousel.scss">
   <link rel="stylesheet" href="check.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -1315,27 +1316,25 @@
 
   <!-- Testimonial Start -->
   <section class="testimonial" id="testi">
-    <div class="container-xxl py-6">
+    <div class="container-xxl py-6 "></div>
       <div class="container">
         <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px">
           <h6 class="text-primary text-uppercase mb-2">Testimonial</h6>
           <h1 class="display-6 mb-4">What Our Students Say!</h1>
         </div>
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <div id="carouselExampleIndicators" class="carousel-wrapper carousel slide" data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
               aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
               aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-              aria-label="Slide 3"></button>
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
               <div class="row justify-content-center testimonia-bg py-5 personal">
                 <div class="col-lg-7   personail" data-wow-delay="0.1s">
                   <div class="employee_name">
-                    <h5>Client Name</h5>
+                    <h5>Dhruv</h5>
                     <span>Profession</span>
                   </div>
                   <p>
@@ -1345,8 +1344,8 @@
                   </p>
                 </div>
                 <div class="col-lg-5  " data-wow-delay="0.3s">
-                  <video autoplay controls muted loop>
-                    <source src="/adynamics3/assets/video/Testimonial 1.mov" type="video/mp4">
+                  <video autoplay controls loop>
+                    <source src="/adynamics3/assets/video/adynamics final draft.mp4" type="video/mp4">
                   </video>
                 </div>
               </div>
@@ -1355,7 +1354,7 @@
               <div class="row justify-content-center testimonia-bg py-5 personal">
                 <div class="col-lg-7   personail" data-wow-delay="0.1s">
                   <div class="employee_name">
-                    <h5>Client Name</h5>
+                    <h5>Ajesh</h5>
                     <span>Profession</span>
                   </div>
                   <p>
@@ -1365,32 +1364,13 @@
                   </p>
                 </div>
                 <div class="col-lg-5  " data-wow-delay="0.3s">
-                  <video autoplay controls muted loop>
-                    <source src="/adynamics3/assets/video/Testimonial 1.mov" type="video/mp4">
+                  <video autoplay controls loop>
+                    <source src="/adynamics3/assets/video/adynamic ajeesh vid.mp4" type="video/mp4">
                   </video>
                 </div>
               </div>
             </div>
-            <div class="carousel-item">
-              <div class="row justify-content-center testimonia-bg py-5 personal">
-                <div class="col-lg-7   personail" data-wow-delay="0.1s">
-                  <div class="employee_name">
-                    <h5>Client Name</h5>
-                    <span>Profession</span>
-                  </div>
-                  <p>
-                    "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus
-                    voluptatem, quos, quae, quidem, doloremque quia pariatur harum ea amet
-                    quibusdam quisquam, quae, temporibus dolores porro doloribus."
-                  </p>
-                </div>
-                <div class="col-lg-5  " data-wow-delay="0.3s">
-                  <video autoplay controls muted loop>
-                    <source src="/adynamics3/assets/video/Testimonial 1.mov" type="video/mp4">
-                  </video>
-                </div>
-              </div>
-            </div>
+            
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
             data-bs-slide="prev">
