--- a/adynamics3/jj.html
+++ b/adynamics3/jj.html
@@ -1316,13 +1316,13 @@
 
   <!-- Testimonial Start -->
   <section class="testimonial" id="testi">
-    <div class="container-xxl py-6 "></div>
+    <div class="container-xxl py-6 ">
       <div class="container">
         <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px">
           <h6 class="text-primary text-uppercase mb-2">Testimonial</h6>
           <h1 class="display-6 mb-4">What Our Students Say!</h1>
         </div>
-        <div id="carouselExampleIndicators" class="carousel-wrapper carousel slide" data-bs-ride="carousel">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
               aria-current="true" aria-label="Slide 1"></button>
