Finished Enquiry Page

--- a/adynamics3/jj.html
+++ b/adynamics3/jj.html
@@ -1175,8 +1175,7 @@
               <div class="text-center p-4">
                 <h5 class="mb-3 mt-2 mt-xl-1">Pre Type Rating and Type Rating Programs</h5>
                 <p>
-                  Our program fully prepares aspiring pilots for A320 certification, providing essential knowledge and
-                  skills for success.
+                  Prepare for getting Type rated with our Pre-Type Rating Class and leverage our partnerships with global TRTOs.
                 </p>
                 <ol class="breadcrumb justify-content-center mb-0">
                   <li class="breadcrumb-item small">
