--- a/adynamics3/enquiry.html
+++ b/adynamics3/enquiry.html
@@ -2,153 +2,242 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Enquiry</title>
+    <!-- Favicon -->
+    <link href="./img/favicon.ico" rel="icon" />
 
-    <title>ADynamics</title>
+    <!-- Google Web Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap"
+        rel="stylesheet" />
 
-    <meta charset="utf-8">
+    <!-- Icon Font Stylesheet -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Libraries Stylesheet -->
+    <link href="./lib/animate/animate.min.css" rel="stylesheet" />
+    <link href="./lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!-- Customized Bootstrap Stylesheet -->
+    <link href="./css/bootstrap.min.css" rel="stylesheet" />
 
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-
-    <link rel="stylesheet" href="/adynamics3/css/enquiry.css">
-    <link rel="stylesheet" href="/adynamics3/css/style.css">
+    <!-- Template Stylesheet -->
+    <link href="./css/style.css" rel="stylesheet" />
+    <link rel="stylesheet" href="./check.css" />
+    <link rel="stylesheet" href="./css/enquiry.css" />
+    <link rel="stylesheet" href="./css2/style.css" />
 </head>
 
 <body>
-    <div class="container"> <!-- open container -->
-        <div class="row"> <!--  open row -->
-
-            <div id="form-header" class="col-12">
-                <h1 id="title">ADynamics Enquiry</h1>
-            </div>
-        </div> <!--  close row -->
-
-        <div class="row"> <!--  open row -->
-            <div id="form-tagline" class="col-md-4">
-                <div class="form-tagline">
-                    <i class="fa fa-envelope fa-5x"></i>
-                    <h2>What are your plans ?</h2>
-                    <p id="description" class="lead">
-
-                    </p>
+    <!-- Topbar Start -->
+    <!-- Topbar Start -->
+    <div class="container-fluid bg-dark text-light p-0">
+        <div class="row gx-0 d-none d-lg-flex">
+            <div class="col-lg-7 px-5 text-start">
+                <div class="h-100 d-inline-flex align-items-center me-4">
+                    <small class="fa fa-map-marker-alt text-primary me-2"></small>
+                    <small>Bengaluru, Karanataka, India</small>
+                </div>
+                <div class="h-100 d-inline-flex align-items-center">
+                    <small class="far fa-clock text-primary me-2"></small>
+                    <small>himanshu@adynamics.in </small>
                 </div>
             </div>
+            <div class="col-lg-5 px-5 text-end">
+                <div class="h-100 d-inline-flex align-items-center me-4">
+                    <small class="fa fa-phone-alt text-primary me-2"></small>
+                    <small>+91-8296076136</small>
+                </div>
+                <div class="h-100 d-inline-flex align-items-center mx-n2">
+                    <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i
+                            class="fab fa-facebook-f" style="font-size: 20px; color: #fff;"></i></a>
+                    <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i
+                            class="fab fa-twitter" style="font-size: 20px;"></i></a>
+                    <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i
+                            class="fab fa-linkedin-in" style="font-size: 20px; color:#fff"></i></a>
+                    <a class="btn btn-square btn-link rounded-0" href=""><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Topbar End -->
+    <!-- Navbar Start -->
+    <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
+        <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
+            <img src="/adynamics3/img/adynamicsLogo.png" width="180px" height="auto" alt="" />
+        </a>
+        <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <div class="navbar-nav ms-auto p-4 p-lg-0">
 
-            <div id="form-content" class="col-md-8">
 
-                <form id="survey-form" onsubmit="return false;"> <!-- open form -->
-
-                    <div class="row form-group">
-                        <div class="col-sm-3">
-                            <label id="name-label" class="control-label" for="name">*Name:</label>
-                        </div>
-
-                        <div class="input-group col-sm-9">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text" id="basic-addon-name"><i class="fa fa-user"></i></span>
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <div class="navbar-nav ms-auto p-4 p-lg-0">
+                        <a href="./jj.html" class="nav-item nav-link">Home</a>
+                        <a href="./testComponents/about-hero.html" class="nav-item nav-link ">About</a>
+                        <a href=".//testComponents/cource-aboutpage.html" class="nav-item nav-link">Flying</a>
+                        <div class="dropdown">
+                            <a href=".//testComponents/clasess.html" class="nav-item nav-link nav-dropdown">Classes</a>
+                            <div class="dropdown-menu">
+                                <a href="./inidvidual-clases/pretyping.html">A320 Pre Type Rating Class</a>
+                                <a href="./course-details.html">DGCA CPL Classes</a>
+                                <a href="./inidvidual-clases/RTR.html">Radio Telephony (RTR) Class</a>
+                                <a href="./inidvidual-clases/niosclasses.html">NIOS Prep Class</a>
                             </div>
-                            <input id="name" type="text" class="form-control" placeholder="Please Enter Your Name"
-                                name="name" required>
+                        </div>
+                        <a href="./blog/homepageblog.html" class="nav-item nav-link">blog</a>
+                    </div>
+                    <div class="button-container">
+                        <button class="button-enquiry" onclick="redirectEnquiry()">
+                            <svg id="svgContainer" fill="currentColor" xmlns="http://www.w3.org/2000/svg"
+                                viewBox="0 0 56 56" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <g id="start">
+                                    <path
+                                        d="M 54.4141 28 C 54.3906 25.2578 50.6639 23.2656 46.1874 23.2656 L 36.7421 23.2656 C 35.4296 23.2656 34.9374 23.0547 34.1640 22.1641 L 18.4140 4.9844 C 17.9218 4.4219 17.3124 4.1406 16.6093 4.1406 L 13.8905 4.1406 C 13.2812 4.1406 12.9296 4.6797 13.2343 5.3359 L 21.3437 23.2656 L 9.4374 24.6250 L 5.1952 16.8437 C 4.8905 16.2578 4.3749 16 3.6015 16 L 2.5937 16 C 1.9843 16 1.5859 16.3984 1.5859 17.0078 L 1.5859 38.9922 C 1.5859 39.6016 1.9843 39.9766 2.5937 39.9766 L 3.6015 39.9766 C 4.3749 39.9766 4.8905 39.7188 5.1952 39.1563 L 9.4374 31.3750 L 21.3437 32.7344 L 13.2343 50.6641 C 12.9296 51.2968 13.2812 51.8594 13.8905 51.8594 L 16.6093 51.8594 C 17.3124 51.8594 17.9218 51.5547 18.4140 51.0156 L 34.1640 33.8125 C 34.9374 32.9453 35.4296 32.7344 36.7421 32.7344 L 46.1874 32.7344 C 50.6639 32.7344 54.3906 30.7188 54.4141 28 Z" />
+                                </g>
+                            </svg>
+                            <span id="enquiryText">ENQUIRY</span>
+                        </button>
+                    </div>
+                </div>
+    </nav>
+    <!-- Navbar End -->
+
+    <!-- Form Start -->
+    <section class="enquiry-section">
+    <div class="form-container">
+        
+        <form id="enquiryForm" >
+            <h1>Enquiry Form</h1>
+            <p>Fill out the form below to get in touch with us.</p>
+            <div class="input-container">
+                <span><i class="fa fa-user"></i></span>
+                <input type="text" id="name" name="name" placeholder="Name" required>
+            </div>
+            <div class="input-container">
+                <span><i class="fa fa-phone"></i></span>
+                <input type="tel" id="phone" name="phone" placeholder="Phone" required>
+            </div>
+            <div class="input-container">
+                <span><i class="fa fa-envelope"></i></span>
+                <input type="email" id="email" name="email" placeholder="Email" required>
+            </div>
+            <div class="input-container">
+                <span><i class="fa fa-hotel"></i></span>
+                <select id="course" name="course" required>
+                    <option value="">Select Course</option>
+                    <option value="">A320 Pre Type Rating Class</option>
+                    <option value="">DGCA CPL Classes</option>
+                    <option value="">Radio Telephony (RTR) Class</option>
+                    <option value="">NIOS Prep Class</option>
+                </select>
+            </div>
+            <div class="input-container">
+                <!-- <img src="message-logo.png" alt="Message"> -->
+                <span><i class="fa fa-comment"></i></span>
+                <textarea id="message" name="message" placeholder="Message" required></textarea>
+            </div>
+            <button type="submit">Submit</button>
+        </form>
+            <img src="./assets/img/enquiry-bg-1.jpeg" alt="">
+    </div>
+</section>
+
+
+    <footer class="new_footer_area bg_color">
+        <div class="new_footer_top">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3 col-md-6">
+                        <div class="f_widget company_widget wow fadeInLeft" data-wow-delay="0.2s"
+                            style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
+                            <h3 class="f-title f_600 t_color f_size_18">Get in Touch</h3>
+                            <p>Don’t miss any updates of our new templates and extensions.!</p>
+                            <form action="#" class="f_subscribe_two mailchimp" method="post" novalidate="true"
+                                _lpchecked="1">
+                                <input type="text" name="EMAIL" class="form-control memail" placeholder="Email">
+                                <button class="btn btn_get btn_get_two" type="submit">Subscribe</button>
+                                <p class="mchimp-errmessage" style="display: none;"></p>
+                                <p class="mchimp-sucmessage" style="display: none;"></p>
+                            </form>
                         </div>
                     </div>
-
-                    <div class="form-group row">
-                        <div class="col-sm-3">
-                            <label id="email-label" class="control-label" for="email">*Email:</label>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.4s"
+                            style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
+                            <h3 class="f-title f_600 t_color f_size_18">Download</h3>
+                            <ul class="list-unstyled f_list">
+                                <li><a href="#">Company</a></li>
+                                <li><a href="#">Android App</a></li>
+                                <li><a href="#">ios App</a></li>
+                                <li><a href="#">Desktop</a></li>
+                                <li><a href="#">Projects</a></li>
+                                <li><a href="#">My tasks</a></li>
+                            </ul>
                         </div>
-
-                        <div class="input-group col-sm-9">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text" id="basic-addon-mail"><i
-                                        class="fa fa-envelope"></i></span>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.6s"
+                            style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInLeft;">
+                            <h3 class="f-title f_600 t_color f_size_18">Help</h3>
+                            <ul class="list-unstyled f_list">
+                                <li><a href="#">FAQ</a></li>
+                                <li><a href="#">Term &amp; conditions</a></li>
+                                <li><a href="#">Reporting</a></li>
+                                <li><a href="#">Documentation</a></li>
+                                <li><a href="#">Support Policy</a></li>
+                                <li><a href="#">Privacy</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="f_widget social-widget pl_70 wow fadeInLeft" data-wow-delay="0.8s"
+                            style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInLeft;">
+                            <h3 class="f-title f_600 t_color f_size_18">Team Solutions</h3>
+                            <div class="f_social_icon">
+                                <a href="#" class="fab fa-facebook"></a>
+                                <a href="#" class="fab fa-twitter"></a>
+                                <a href="#" class="fab fa-linkedin"></a>
+                                <a href="#" class="fab fa-pinterest"></a>
                             </div>
-                            <input type="email" class="form-control" id="email" placeholder="Enter Your Email"
-                                name="email" pattern="^[-+.\w]{1,64}@[-.\w]{1,64}\.[-.\w]{2,6}$" required>
                         </div>
                     </div>
-
-                    <div class="form-group row">
-                        <div class="col-sm-3">
-                            <label id="number-label" class="control-label" for="email">*Phone Number:</label>
-                        </div>
-
-                        <div class="input-group col-sm-9">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text" id="basic-addon-room"><i class="fa fa-phone "></i></span>
-                            </div>
-                            <input type="number" class="form-control" id="number" placeholder="Enter Your Phone Number"
-                                name="number" min="1" max="125" required>
-                        </div>
-                    </div>
-
-                    <div class="form-group row">
-                        <div class="col-sm-3">
-                            <label class="control-label" for="visit-purpose">Course in mind:</label>
-                        </div>
-
-                        <div class="input-group col-sm-9">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text" id="basic-addon-purpose"><i
-                                        class="fa fa-hotel"></i></span>
-                            </div>
-
-                            <select class="form-control" id="dropdown">
-                                <option>A320 Pre Type Rating Class</option>
-                                <option>DGCA CPL Classes</option>
-                                <option>Radio Telephony (RTR) Class</option>
-                                <option>NIOS Prep Class</option>
-                            </select>
-
-                        </div>
-                    </div>
-
-                    <hr>
-
-                    <div class="form-group row">
-                        <div class="col-sm-3">
-                            <label class="control-label" for="comment">Message:</label>
-                        </div>
-
-                        <div class="input-group col-sm-9">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text" id="basic-addon-mail"><i
-                                        class="fa fa-comment"></i></span>
-                            </div>
-                            <textarea class="form-control" rows="5" id="comment"></textarea>
-                        </div>
-                    </div>
-
-                    <div class="form-group row">
-                        <div class="col-sm-12 submit-button">
-                            <button type="submit" id="submit" class="btn btn-default" aria-pressed="true">Submit
-                                Form</button>
-                        </div>
-                    </div>
-
-                </form> <!-- close form -->
-
-            </div> <!-- close form content div -->
-
-        </div> <!-- close row -->
-    </div><!--  close container -->
-
-    <footer>
+                </div>
+            </div>
+            <div class="footer_bg">
+                <div class="footer_bg_one"></div>
+                <div class="footer_bg_two"></div>
+            </div>
+        </div>
 
     </footer>
 
+    <a href="" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-whatsapp"></i></a>
+    <!-- JavaScript Libraries -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./lib/wow/wow.min.js"></script>
+    <script src="./lib/easing/easing.min.js"></script>
+    <script src="./lib/waypoints/waypoints.min.js"></script>
+    <script src="./lib/owlcarousel/owl.carousel.min.js"></script>
+
+    <!-- Template Javascript -->
+    <script src="./js/main.js"></script>
+    <script src="./assets/js/main.js"></script>
+
     <script>
         $(document).ready(function () {
-            $("#survey-form").submit(function () {
+            $("#enquiryForm").submit(function () {
                 alert("Thank You For Your Feedback");
                 document.getElementById("survey-form").reset();
             });
         });
-
     </script>
 </body>
 
