Added some more content changes

--- a/adynamics3/courses.html
+++ b/adynamics3/courses.html
@@ -61,7 +61,7 @@
                                 class="nav-item nav-link nav-dropdown ">Classes</a>
                             <div class="dropdown-menu">
                                 <a href="/adynamics3/inidvidual-clases/pretyping.html">A320 Pre Type Rating Class</a>
-                                <a href="/adynamics3/course-details.html">DGCA CPL Classes</a>
+                                <a href="/adynamics3/course-details.html">DGCA Ground Classes</a>
                                 <a href="/adynamics3/inidvidual-clases/RTR.html">Radio Telephony (RTR) Class</a>
                                 <a href="/adynamics3/inidvidual-clases/niosclasses.html">NIOS Prep Class</a>
                             </div>
