--- a/adynamics3/inidvidual-clases/CONVESION.html
+++ b/adynamics3/inidvidual-clases/CONVESION.html
@@ -60,7 +60,7 @@
               <a href="../testComponents/clasess.html" class="nav-item nav-link nav-dropdown ">Classes</a>
               <div class="dropdown-menu">
                 <a href="../inidvidual-clases/pretyping.html">A320 Pre Type Rating Class</a>
-                <a href="../course-details.html">DGCA CPL Classes</a>
+                <a href="../course-details.html">DGCA Ground Classes</a>
                 <a href="../inidvidual-clases/RTR.html">Radio Telephony (RTR) Class</a>
                 <a href="../inidvidual-clases/niosclasses.html">NIOS Prep Class</a>
               </div>
@@ -89,10 +89,10 @@
         <div class="hero-text-section col-lg-6 order-lg-1 order-2 py-3 py-sm-5">
           <div class="hero-text-wrapper text-lg-start text-center px-0 px-sm-4">
             <strong>
-              <p class="text-xl">WELCOME TO ADYNAMICS</p>
+              <p class="text-xl">Foreign License Conversion</p>
             </strong>
             <h1 class="pt- display-6">
-              Mumbai NO.1 Rated Online Flying Aviation Training Center
+              Quick and Affordable Conversion to DGCA CPL
             </h1>
 
             <div class="btn-group">
@@ -352,9 +352,9 @@
         <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
           <div class="courses-item d-flex flex-column flex-xl-row arc-shadow overflow-hidden h-100">
             <div class="text-center p-4">
-              <h5 class="mb-3 mt-2 mt-xl-1"> DGCA cpl classes</h5>
+              <h5 class="mb-3 mt-2 mt-xl-1"> DGCA Ground Classes</h5>
               <p>
-                The DGCA CPL classes play a pivotal role in shaping competent and responsible commercial pilots.
+                Dive deep into theoretical concepts, building a strong foundation to ace DGCA Ground tests.
               </p>
               <ol class="breadcrumb justify-content-center mb-0">
                 <li class="breadcrumb-item small">
@@ -460,9 +460,9 @@
           <div class="wow fadeInUp testimonial-item imSection-bg border-r10" data-wow-delay="0.1s">
             <div class="courses-item d-flex flex-column flex-xl-row overflow-hidden h-100">
               <div class="text-center p-4">
-                <h5 class="mb-3 mt-2 mt-xl-1"> DGCA cpl classes</h5>
+                <h5 class="mb-3 mt-2 mt-xl-1"> DGCA Ground Classes</h5>
                 <p>
-                  The DGCA CPL classes play a pivotal role in shaping competent and responsible commercial pilots, .
+                  Dive deep into theoretical concepts, building a strong foundation to ace DGCA Ground tests.
                 </p>
                 <ol class="breadcrumb justify-content-center mb-0">
                   <li class="breadcrumb-item small">
@@ -562,7 +562,7 @@
               <h3 class="f-title f_600 t_color f_size_18">Courses</h3>
               <ul class="list-unstyled f_list">
                 <li><a href="#">A320 Pre Type Rating Class</a></li>
-                <li><a href="#">DGCA CPL Classes</a></li>
+                <li><a href="#">DGCA Ground Classes</a></li>
                 <li><a href="#">Radio Telephony (RTR) Class</a></li>
                 <li><a href="#">NIOS Prep Class</a></li>
                 <li><a href="#">cpl conversion</a></li>
