--- a/adynamics3/testComponents/about-hero.html
+++ b/adynamics3/testComponents/about-hero.html
@@ -88,7 +88,7 @@
               <a href="../testComponents/clasess.html" class="nav-item nav-link nav-dropdown ">Classes</a>
               <div class="dropdown-menu">
                 <a href="../inidvidual-clases/pretyping.html">A320 Pre Type Rating Class</a>
-                <a href="../course-details.html">DGCA CPL Classes</a>
+                <a href="../course-details.html">DGCA Ground Classes</a>
                 <a href="../inidvidual-clases/RTR.html">Radio Telephony (RTR) Class</a>
                 <a href="../inidvidual-clases/niosclasses.html">NIOS Prep Class</a>
               </div>
