--- a/adynamics3/testComponents/cource-aboutpage.html
+++ b/adynamics3/testComponents/cource-aboutpage.html
@@ -87,7 +87,7 @@
                                 class="nav-item nav-link nav-dropdown ">Classes</a>
                             <div class="dropdown-menu">
                                 <a href="../inidvidual-clases/pretyping.html">A320 Pre Type Rating Class</a>
-                                <a href="../course-details.html">DGCA CPL Classes</a>
+                                <a href="../course-details.html">DGCA Ground Classes</a>
                                 <a href="../inidvidual-clases/RTR.html">Radio Telephony (RTR) Class</a>
                                 <a href="../inidvidual-clases/niosclasses.html">NIOS Prep Class</a>
                             </div>
@@ -116,9 +116,8 @@
     <div class="container-xxl my-4 my-xl-6 py-6 pb-0">
         <div class="container" style="margin-top:-70px ;">
             <div class="text-center mx-auto mb-5" data-wow-delay="0.1s" style="max-width: 500px">
-                <h6 class="text-primary text-uppercase mb-2"> Courses</h6>
                 <h1 class="display-6 mb-4">
-                    Our Courses Upskill You With Flying Training
+                    Our Global Network of Services
                 </h1>
             </div>
         </div>
@@ -801,7 +800,7 @@
                         <img class="img-fluid border-r10" src="../img/DGCACpl2.png" alt="" />
                         <div class="courses-overlay">
                             <a class="btn btn-outline-primary border-2 courses-btn-bg"
-                                href="../inidvidual-clases/cpltaring.html">Read More</a>
+                                href="../inidvidual-clases/CONVESION.html">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -814,14 +813,14 @@
                         <h5 class="mb-3 mt-2 mt-xl-1">
                             CPL Training in USA</h5>
                         <p>
-                            Demanding program intended to ready individuals for a professional pilot career.
+                            Accelerate your path to becoming a pilot with FAA CPL.
                         </p>
                         <ol class="breadcrumb justify-content-center mb-0">
                             <li class="breadcrumb-item small">
                                 <i class="fa fa-signal text-primary me-2"></i>Beginner
                             </li>
                             <li class="breadcrumb-item small">
-                                <i class="fa fa-calendar-alt text-primary me-2"></i>3 Week
+                                <i class="fa fa-calendar-alt text-primary me-2"></i>7 Months
                             </li>
                             <li>
                                 <i class="fa fa-map-marker text-primary me-2"></i>Click to learn more
@@ -937,21 +936,14 @@
             <div  data-wow-delay="0.3s">
                 <div class="courses-item d-flex flex-column flex-xl-row arc-shadow overflow-hidden h-100">
                     <div class="text-center p-4">
-                        <h5 class="mb-3 mt-2 mt-xl-1">CPL Training in Tunisia</h5>
-                        <p>
-
-                            Many aspiring pilots worldwide choose of its excellent aviation infrastructure and training
-                            facilities.
-                        </p>
-                        <ol class="breadcrumb justify-content-center mb-0">
+                        <h5 class="mb-3 mt-2 mt-xl-1">CPL cum Type Rating in Tunisia</h5>
+                        <p>Complete both CPL and Type Rating at Tunisia and access student loans for both.</p>
+                        <ol class="breadcrumb justify-content-space-between mb-0">
                             <li class="breadcrumb-item small">
                                 <i class="fa fa-signal text-primary me-2"></i>Beginner
                             </li>
-                            <li class="breadcrumb-item small">
-                                <i class="fa fa-calendar-alt text-primary me-2"></i>3 Week
-                            </li>
                             <li>
-                                <i class="fa fa-map-marker text-primary me-2"></i>Click to learn more
+                                <i class="fa fa-map-marker text-primary me-2" style="margin-left: 5px;"></i>Click to learn more
                             </li>
                         </ol>
                     </div>
