--- a/adynamics3/enquiry.html
+++ b/adynamics3/enquiry.html
@@ -86,7 +86,7 @@
                             <a href=".//testComponents/clasess.html" class="nav-item nav-link nav-dropdown">Classes</a>
                             <div class="dropdown-menu">
                                 <a href="./inidvidual-clases/pretyping.html">A320 Pre Type Rating Class</a>
-                                <a href="./course-details.html">DGCA CPL Classes</a>
+                                <a href="./course-details.html">DGCA Ground Classes</a>
                                 <a href="./inidvidual-clases/RTR.html">Radio Telephony (RTR) Class</a>
                                 <a href="./inidvidual-clases/niosclasses.html">NIOS Prep Class</a>
                             </div>
@@ -133,7 +133,7 @@
                 <select id="course" name="course" required>
                     <option value="">Select Course</option>
                     <option value="">A320 Pre Type Rating Class</option>
-                    <option value="">DGCA CPL Classes</option>
+                    <option value="">DGCA Ground Classes</option>
                     <option value="">Radio Telephony (RTR) Class</option>
                     <option value="">NIOS Prep Class</option>
                 </select>
