to change gthe content

--- a/adynamics3/jj.html
+++ b/adynamics3/jj.html
@@ -187,6 +187,9 @@
       .marr{
         margin-left: -43px;
       }
+      .list ul li:hover:before {
+     transform: scaleX(1);
+}
     }
   </style>
 </head>
