to change gthe content

--- a/adynamics3/jj.html
+++ b/adynamics3/jj.html
@@ -308,7 +308,7 @@
               </div>
               <div class="ps-4">
                 <h5>Streamlined Support Services</h5>
-                <span>We handle all the student loans and visas applications, computer number generation, registration
+                <span>We handle all the student loans and visa applications, computer number generation, registration
                   work and much more on your behalf</span>
               </div>
             </div>
